module8/simple-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
        - name:
          image:
          readinessProbe:
