module8/simple-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: simple-web
