module8/simple-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # 证书
  tls:
    - hosts:
        - jrx.com
      secretName: jrx-tls
  rules:
    - host: jrx.com
      http:
        paths:
          - path: "/envVar"
            pathType: Exact
            backend:
              service:
                name: simple-web-svc
                port:
                  number: 8080
